deploy: Configure Azure Container Apps deployment
- Update ACR name to factoryagentdevacr
- Add deployment secrets documentation
- Prepare for automated CI/CD deployment
- Docker images already pushed to ACR

Ready to deploy to Azure Container Apps via GitHub Actions.

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -58,7 +58,7 @@ on:
 
 # Environment variables used across all jobs
 env:
-  AZURE_CONTAINER_REGISTRY: factoryagent4u4zqkacr  # ACR name (actual deployed registry)
+  AZURE_CONTAINER_REGISTRY: factoryagentdevacr  # ACR name (actual deployed registry)
   BACKEND_IMAGE_NAME: factory-agent/backend
   AZURE_RESOURCE_GROUP: factory-agent-dev-rg
   CONTAINER_APP_NAME: factory-agent-dev-backend
