--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -53,7 +53,7 @@ on:
 # Use repository variables with fallback to default values for backward compatibility
 # To set repository variables: GitHub Settings > Secrets and variables > Actions > Variables
 env:
-  AZURE_CONTAINER_REGISTRY: ${{ vars.AZURE_CONTAINER_REGISTRY || 'factoryagent4u4zqkacr' }}
+  AZURE_CONTAINER_REGISTRY: ${{ vars.AZURE_CONTAINER_REGISTRY || 'factoryagentdevacr' }}
   FRONTEND_IMAGE_NAME: factory-agent/frontend
   AZURE_RESOURCE_GROUP: ${{ vars.AZURE_RESOURCE_GROUP || 'factory-agent-dev-rg' }}
   CONTAINER_APP_NAME: ${{ vars.CONTAINER_APP_NAME || 'factory-agent-dev-frontend' }}
